@@ -1,0 +1,1 @@
+DEBUG_MODE = __debug__
